# med

./: .gitignore  README.md  pyproject.toml
med/: Untitled.ipynb  config.json  experiment-lats-anthropic_claude-0.5.json  experiment-lats-gemini-1.5-pro-001-0.2.json  experiment-lats-gemini-1.5-pro-001-0.5.json  experiment-lats-gemini-1.5-pro-002-0.5.json  experiment-lats-gemini-2.5-flash-preview-04-17-0.2.json  experiment-lats-gemini-2.5-pro-preview-03-25-0.2.json  experiment-lats-mistral_large-0.5.json  experiment2a.json  lats.bash  oncology.json  oncology2.json  pyproject.toml  stats.bash
med/qa/: agent_lats.py  agent_multi.py  agent_plan.py  agent_reflect.py  agents_utils.py  callbacks.py  chains.py  models.py  questions.py  run.py  stats.py  utils.py
